chore(release): publish
 - @next-bricks/advanced@0.1.3
 - @next-bricks/basic@0.6.0
 - @next-bricks/containers@0.5.0
 - @next-bricks/data-view@0.7.0
 - @next-bricks/devtools@0.1.6
 - @next-bricks/form@0.4.3
 - @next-bricks/icons@0.1.7
 - @next-bricks/illustrations@0.1.8
 - @next-bricks/presentational@0.1.0
 - @next-bricks/shoelace@0.3.2
 - @next-bricks/v2-adapter@0.0.11
 - @next-bricks/visual-builder@0.2.0
 - @next-shared/general@0.2.0

--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/presentational",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/presentational",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/containers": "*",
+    "@next-bricks/containers": "^0.5.0",
     "@next-core/element": "^1.0.5",
     "@next-core/i18n": "^1.0.18",
     "@next-core/react-element": "^1.0.6",
