--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -57,7 +57,7 @@
     "@types/react-dom": "^18.0.0",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
     "tslib": "^2.4.1",
-    "@next-sdk/object-store-sdk": "^2.1.2",
+    "@next-api-sdk/object-store-sdk": "1.1.0",
     "@next-core/brick-http": "^2.8.1"
   },
   "devDependencies": {
