--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/markdown",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/markdown",
   "repository": {
     "type": "git",
@@ -29,21 +29,21 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/theme": "^1.1.1",
-    "react": "0.0.0-experimental-ee8509801-20230117",
     "@milkdown/core": "7.2.0",
     "@milkdown/ctx": "7.2.0",
+    "@milkdown/plugin-history": "7.2.0",
+    "@milkdown/plugin-listener": "7.2.0",
+    "@milkdown/plugin-upload": "7.2.0",
     "@milkdown/preset-commonmark": "7.2.0",
     "@milkdown/prose": "7.2.0",
     "@milkdown/react": "7.2.0",
-    "@milkdown/transformer": "7.2.0",
     "@milkdown/theme-nord": "7.2.0",
-    "@milkdown/plugin-history": "7.2.0",
-    "@milkdown/plugin-upload": "7.2.0",
+    "@milkdown/transformer": "7.2.0",
     "@milkdown/utils": "7.2.0",
-    "@milkdown/plugin-listener": "7.2.0",
+    "@next-api-sdk/object-store-sdk": "1.1.0",
+    "@next-core/theme": "^1.1.1",
     "@type-config/strict": "^1.2.1",
-    "@next-api-sdk/object-store-sdk": "1.1.0"
+    "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.5.1",
