--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -38,6 +38,7 @@
     "@next-core/react-runtime": "^1.0.40",
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.3.0",
+    "@next-shared/general": "^0.2.1",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
