--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -11,11 +11,13 @@
   "sideEffects": true,
   "files": [
     "dist",
-    "dist-types"
+    "dist-types",
+    "docs"
   ],
   "exports": {
     "./package.json": "./package.json",
     "./dist/bricks.json": "./dist/bricks.json",
+    "./dist/manifest.json": "./dist/manifest.json",
     "./*": {
       "types": "./dist-types/*/index.d.ts"
     }
@@ -49,7 +51,7 @@
     "react-dom": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^1.5.3",
+    "@next-core/build-next-bricks": "^1.6.0",
     "@next-core/test-next": "^1.0.6"
   }
 }
