--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -27,6 +27,7 @@
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
+    "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
@@ -47,7 +48,7 @@
     "three": "^0.150.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^1.6.0",
+    "@next-core/build-next-bricks": "^1.7.1",
     "@next-core/test-next": "^1.0.6",
     "@types/d3-hierarchy": "^3.1.2",
     "@types/three": "^0.150.1"
