--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -44,6 +44,7 @@
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
+    "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
@@ -63,7 +64,7 @@
   },
   "devDependencies": {
     "@next-core/brick-icons": "^2.31.46",
-    "@next-core/build-next-bricks": "^1.6.0",
+    "@next-core/build-next-bricks": "^1.7.1",
     "@next-core/test-next": "^1.0.6",
     "copy-webpack-plugin": "^11.0.0"
   }
