--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -42,6 +42,7 @@
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
+    "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "test": "cross-env NODE_ENV='test' test-next",
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
@@ -52,7 +53,7 @@
     "@next-core/utils": "^1.5.2"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^1.6.0",
+    "@next-core/build-next-bricks": "^1.7.1",
     "@next-core/illustrations": "^0.11.13",
     "@next-core/test-next": "^1.0.6",
     "lodash": "^4.17.21"
