--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -27,6 +27,7 @@
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
+    "build:manifest": "cross-env NODE_ENV=production build-next-bricks --manifest-only",
     "prepublishOnly": "cp package.json package.json.bak && npm pkg delete dependencies",
     "postpublish": "mv package.json.bak package.json"
   },
@@ -44,7 +45,7 @@
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^1.6.0",
+    "@next-core/build-next-bricks": "^1.7.1",
     "@next-core/test-next": "^1.0.6"
   }
 }
