--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -85,7 +85,7 @@ jobs:
     #   uses: peaceiris/actions-gh-pages@v3
     #   with:
     #     github_token: ${{ secrets.GITHUB_TOKEN }}
-    #     publish_dir: ./dist
+    #     publish_dir: ./build
     #     publish_branch: gh-pages
     #     force_orphan: true
     #   if: github.event_name == 'push'
