--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -35,19 +35,27 @@
   },
   "dependencies": {
     "@next-bricks/icons": "^0.1.9",
+    "@next-core/brick-http": "^2.8.1",
     "@next-core/element": "^1.0.6",
     "@next-core/http": "^1.0.6",
+    "@next-core/i18n": "^1.0.19",
     "@next-core/react-element": "^1.0.7",
     "@next-core/react-runtime": "^1.0.40",
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.3.0",
     "@next-shared/general": "^0.2.1",
-    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.7.1",
-    "@next-core/test-next": "^1.0.6"
+    "@next-core/test-next": "^1.0.6",
+    "@next-libs/storage": "^2.0.4",
+    "@next-sdk/micro-app-standalone-sdk": "^1.1.1",
+    "@next-sdk/user-service-sdk": "^2.2.2",
+    "@types/react-transition-group": "^4.4.6",
+    "classnames": "^2.3.2",
+    "hotkeys-js": "^3.10.1"
   }
 }
