chore(ci): put playground in docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build_bricks:
+    name: Build bricks
     runs-on: ubuntu-latest
 
     strategy:
@@ -45,9 +45,6 @@ jobs:
       run: echo "::set-output name=sum::$(cksum yarn.lock)"
 
     - run: yarn install --frozen-lockfile
-      env:
-        CYPRESS_INSTALL_BINARY: ''
-        CYPRESS_DOWNLOAD_MIRROR: ''
 
     - name: Get checksum after yarn install
       id: yarn-lock-check-after
@@ -58,32 +55,6 @@ jobs:
       if: steps.yarn-lock-check-before.outputs.sum != steps.yarn-lock-check-after.outputs.sum
 
     - run: yarn build
-      if: github.event_name != 'pull_request'
-
-    # v2-adapter is not used in playground
-    - run: yarn build --ignore @next-bricks/v2-adapter
-      if: github.event_name == 'pull_request'
-
-    - run: yarn build:gh
-
-    - name: Deploy to Netlify
-      uses: nwtgck/actions-netlify@v2.0
-      with:
-        publish-dir: './dist/playground'
-        production-branch: master
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        deploy-message: ${{ github.event.pull_request.title }}
-        alias: deploy-preview-${{ github.event.number }}
-        netlify-config-path: ./netlify.toml
-      env:
-        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-      timeout-minutes: 1
-      continue-on-error: true
-      if: github.event_name == 'pull_request'
-
-    - run: yarn build --scope @next-bricks/v2-adapter
-      if: github.event_name == 'pull_request'
 
     - run: yarn test:ci
 
@@ -98,11 +69,79 @@ jobs:
         npm-token: ${{ secrets.NPM_TOKEN }}
       if: github.event_name == 'push'
 
-    - name: Deploy
+    - uses: actions/upload-artifact@v3
+      with:
+        name: brick-artifacts
+        path: |
+          bricks/*/dist
+          !bricks/*/dist/**/*.map
+          !bricks/devtools/dist
+          !bricks/v2-adapter/dist
+          netlify.toml
+        retention-days: 1
+
+  build_docs:
+    name: Build docs
+    needs: build_bricks
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        repository: easyops-cn/brick-docs
+        ref: refs/heads/master
+        token: ${{ secrets.GH_TOKEN_EVE }}
+
+    - uses: actions/download-artifact@v3
+      with:
+        name: brick-artifacts
+        path: ci-bricks
+
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - name: Cache for yarn
+      uses: actions/cache@v3
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: docs-node-cache-${{ runner.os }}-yarn-v3-${{ hashFiles('yarn.lock') }}
+        restore-keys: |
+          docs-node-cache-${{ runner.os }}-yarn-v3-
+
+    - name: Install dependencies (docs)
+      run: yarn install --frozen-lockfile
+
+    - name: Build (docs)
+      run: yarn build
+
+    - name: Deploy to Netlify (pull request)
+      id: netlify-deploy
+      uses: nwtgck/actions-netlify@v2.0
+      with:
+        publish-dir: './build'
+        production-branch: master
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        deploy-message: "${{ github.event.pull_request.title }}"
+        alias: docs-preview-${{ github.event.number }}
+        netlify-config-path: ./ci-bricks/netlify.toml
+      env:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      timeout-minutes: 2
+      if: github.event_name == 'pull_request'
+
+    - name: Deploy to gh-pages (push to master)
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        personal_token: ${{ secrets.GH_TOKEN_EVE }}
+        external_repository: easyops-cn/bricks
+        cname: bricks.js.org
+        publish_dir: ./build
         publish_branch: gh-pages
         force_orphan: true
       if: github.event_name == 'push'
