chore(ci): compress workflow artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,15 +69,14 @@ jobs:
         npm-token: ${{ secrets.NPM_TOKEN }}
       if: github.event_name == 'push'
 
+    - name: Compress artifacts
+      run: |
+        tar --exclude='*.map' --exclude='bricks/devtools' --exclude='bricks/v2-adapter' -cvf bricks.tar bricks/*/dist bricks/*/docs netlify.toml
+
     - uses: actions/upload-artifact@v3
       with:
         name: brick-artifacts
-        path: |
-          bricks/*/dist
-          !bricks/*/dist/**/*.map
-          !bricks/devtools/dist
-          !bricks/v2-adapter/dist
-          netlify.toml
+        path: bricks.tar
         retention-days: 1
 
   build_docs:
@@ -100,6 +99,10 @@ jobs:
       with:
         name: brick-artifacts
         path: ci-bricks
+
+    - name: Extract artifacts
+      run: tar -xvf bricks.tar
+      working-directory: ci-bricks
 
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
