--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "cypress": "^12.12.0",
     "eslint": "^8.36.0",
