feat(): support icons.get-libs & icons.search-icons
Closes NEXT_BUILDER-3361

--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -33,6 +33,9 @@
     "./package.json": "./package.json",
     "./dist/bricks.json": "./dist/bricks.json",
     "./dist/manifest.json": "./dist/manifest.json",
+    "./data-providers/*": {
+      "types": "./dist-types/data-providers/*.d.ts"
+    },
     "./*": {
       "types": "./dist-types/*/index.d.ts"
     }
