--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -40,6 +40,7 @@
     "@next-core/runtime": "^1.14.0",
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.3.0",
+    "@next-core/utils": "^1.5.2",
     "@next-shared/general": "^0.3.0",
     "classnames": "^2.3.2",
     "react": "0.0.0-experimental-ee8509801-20230117"
