chore(ci): fix globstar

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,8 @@ jobs:
         npm-token: ${{ secrets.NPM_TOKEN }}
       if: github.event_name == 'push'
 
+    - run: shopt -s globstar
+
     - name: Compress artifacts
       run: >-
         tar
