--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@next-bricks/icons": "^0.2.1",
+    "@next-bricks/shoelace": "^0.4.1",
     "@next-core/element": "^1.0.6",
     "@next-core/http": "^1.0.6",
     "@next-core/i18n": "^1.0.20",
