--- a/bricks/basic/deploy-default/package.conf.yaml
+++ b/bricks/basic/deploy-default/package.conf.yaml
@@ -1,6 +1,9 @@
 install_path: /usr/local/easyops/bricks/basic-NB
 user: "easyops:easyops"
 dependencies:
+  - name: brick_next
+    version: ^2.86.3 || ^3.0.0
+    local_deploy: true
   - name: "shoelace-NB"
     version: ^0.4.1
   - name: "icons-NB"
