--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -35,7 +35,6 @@
   },
   "dependencies": {
     "@next-core/element": "^1.0.6",
-    "@next-core/i18n": "^1.0.20",
     "@next-core/monaco-contributions": "^0.2.0",
     "@next-core/react-element": "^1.0.7",
     "@next-core/react-runtime": "^1.0.46",
@@ -47,6 +46,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.7.2",
-    "@next-core/test-next": "^1.0.6"
+    "@next-core/test-next": "^1.0.6",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
