--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -34,12 +34,13 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-bricks/form": "^0.7.0",
     "@next-core/element": "^1.0.6",
     "@next-core/monaco-contributions": "^0.2.0",
     "@next-core/react-element": "^1.0.7",
     "@next-core/react-runtime": "^1.0.46",
     "@next-core/theme": "^1.1.1",
-    "@next-shared/form": "^0.0.0",
+    "@next-shared/form": "^0.0.1",
     "monaco-editor": "^0.39.0",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "0.0.0-experimental-ee8509801-20230117"
