feat(): show-dialog support highlight expect
Closes NEXT_BUILDER-3444

--- a/bricks/basic/src/data-providers/show-dialog/example.yaml
+++ b/bricks/basic/src/data-providers/show-dialog/example.yaml
@@ -51,7 +51,7 @@ children:
       args:
       - type: delete
         title: Delete Confirm
-        content: Please enter cat.png to delete the file.
+        content: Please enter {{ expect }} to delete the file.
         expect: cat.png
       callback:
         success:
