feat(): 告警提示构件
Closes NEXT_BUILDER-3246

--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -35,11 +35,13 @@
   },
   "dependencies": {
     "@next-bricks/containers": "^0.7.3",
+    "@next-bricks/icons": "^0.2.2",
     "@next-core/element": "^1.0.6",
     "@next-core/i18n": "^1.0.21",
     "@next-core/react-element": "^1.0.7",
     "@next-core/types": "^1.5.0",
     "@next-core/utils": "^1.5.4",
+    "@next-shared/general": "^0.3.3",
     "classnames": "^2.3.2",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
