--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@next-core/eslint-config-next": "^2.0.5",
     "@next-core/test-next": "^1.0.6",
     "@next-core/yo": "^1.2.5",
+    "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
     "@types/js-yaml": "^3.12.7",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.14",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
