--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -43,6 +43,7 @@
     "@milkdown/theme-nord": "7.2.0",
     "@milkdown/transformer": "7.2.0",
     "@milkdown/utils": "7.2.0",
+    "@milkdown/preset-gfm": "7.2.0",
     "@next-api-sdk/object-store-sdk": "1.1.0",
     "@next-core/theme": "^1.1.1",
     "@type-config/strict": "^1.2.1",
