--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -45,12 +45,14 @@
     "@next-shared/general": "^0.3.5",
     "classnames": "^2.3.2",
     "file-saver": "^2.0.5",
+    "prism-react-renderer": "^2.0.6",
     "prismjs": "^1.29.0",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.12.0",
-    "@next-core/test-next": "^1.0.6"
+    "@next-core/test-next": "^1.0.6",
+    "babel-plugin-prismjs": "^2.1.0"
   }
 }
