--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/markdown",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/markdown",
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "@milkdown/plugin-history": "7.2.0",
     "@milkdown/plugin-indent": "7.2.0",
     "@milkdown/plugin-listener": "7.2.0",
+    "@milkdown/plugin-tooltip": "7.2.0",
     "@milkdown/plugin-upload": "7.2.0",
     "@milkdown/preset-commonmark": "7.2.0",
     "@milkdown/preset-gfm": "7.2.0",
@@ -45,12 +46,11 @@
     "@milkdown/theme-nord": "7.2.0",
     "@milkdown/transformer": "7.2.0",
     "@milkdown/utils": "7.2.0",
-    "@milkdown/plugin-tooltip": "7.2.0",
     "@next-api-sdk/object-store-sdk": "1.1.0",
     "@next-core/theme": "^1.1.1",
+    "@prosemirror-adapter/react": "^0.2.2",
     "@type-config/strict": "^1.2.1",
-    "react": "0.0.0-experimental-ee8509801-20230117",
-    "@prosemirror-adapter/react": "^0.2.2"
+    "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.13.0",
