--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@next-bricks/form": "^0.11.2",
+    "@next-core/cook": "^2.2.3",
     "@next-core/element": "^1.1.1",
     "@next-core/monaco-contributions": "^0.3.0",
     "@next-core/react-element": "^1.0.9",
