--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -40,14 +40,13 @@
     "@next-core/http": "^1.0.7",
     "@next-core/react-element": "^1.0.9",
     "@next-core/react-runtime": "^1.0.54",
+    "@next-core/runtime": "^1.17.7",
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.5.0",
     "@next-shared/form": "^0.1.1",
-    "brace": "^0.11.1",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
-    "react-ace": "^10.1.0",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
