--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -40,6 +40,7 @@
     "@next-core/element": "^1.1.2",
     "@next-core/i18n": "^1.0.23",
     "@next-core/react-element": "^1.0.10",
+    "@next-core/react-runtime": "^1.0.57",
     "@next-core/types": "^1.5.1",
     "@next-core/utils": "^1.5.6",
     "@next-shared/general": "^0.3.7",
