--- a/mock-micro-apps/ui-test/storyboard.yaml
+++ b/mock-micro-apps/ui-test/storyboard.yaml
@@ -9,5 +9,6 @@ routes:
   bricks:
     - brick: ui-test.preview-container
       properties:
-        src: http://localhost:8081/e2e/use-brick/1
+        src: http://localhost:8081/next/visual-builder/
+        # src: http://localhost:8081/next/steve-test-v3/weather
         recordEnabled: true
