--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -43,6 +43,8 @@
     "@next-core/utils": "^1.5.6",
     "@next-shared/general": "^0.3.9",
     "classnames": "^2.3.2",
+    "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
