--- a/bricks/v2-adapter/deploy-default/package.conf.yaml
+++ b/bricks/v2-adapter/deploy-default/package.conf.yaml
@@ -2,7 +2,7 @@ install_path: /usr/local/easyops/bricks/v2-adapter-NB
 user: "easyops:easyops"
 dependencies:
   - name: brick_next
-    version: ^3.0.0
+    version: ^2.89.8 || ^3.5.2
     local_deploy: true
   - name: icons-NB
     version: ">= 0.3.0"
