--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -41,6 +41,7 @@
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.5.1",
     "@next-core/utils": "^1.5.6",
+    "@next-core/storyboard": "^0.6.0",
     "@next-shared/general": "^0.3.13",
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
