feat(): support sidebar sub menu
Refs NEXT_BUILDER-3795

--- a/bricks/basic/src/nav-menu/example.yaml
+++ b/bricks/basic/src/nav-menu/example.yaml
@@ -1,7 +1,7 @@
 - brick: eo-nav-menu
   properties:
     menu:
-      title: mock aa
+      title: mock data
       menuItems:
         - text: 创造
           to: /a
