--- a/bricks/vb-experiment/package.json
+++ b/bricks/vb-experiment/package.json
@@ -32,12 +32,17 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@babel/parser": "^7.22.7",
+    "@babel/standalone": "^7.22.9",
+    "@babel/types": "^7.22.5",
     "@next-core/types": "^1.6.0",
     "@next-core/utils": "^1.5.7",
     "change-case": "^4.1.2",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
-    "prettier": "^2.8.6"
+    "lodash": "^4.17.21",
+    "prettier": "^2.8.6",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.13.4"
