--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -49,6 +49,7 @@
     "@milkdown/utils": "7.2.0",
     "@next-api-sdk/object-store-sdk": "1.1.0",
     "@next-core/theme": "^1.1.1",
+    "@next-shared/form": "^0.3.1",
     "@prosemirror-adapter/react": "^0.2.2",
     "@type-config/strict": "^1.2.1",
     "react": "0.0.0-experimental-ee8509801-20230117",
