--- a/bricks/basic/src/sidebar-sub-menu/example.yaml
+++ b/bricks/basic/src/sidebar-sub-menu/example.yaml
@@ -90,3 +90,7 @@
           title: 调用关系
           type: group
           key: "3"
+      icon:
+        category: model
+        icon: docker-image
+        lib: easyops
