--- a/bricks/form-platform/package.json
+++ b/bricks/form-platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/form-platform",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/form-platform",
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/form": "^0.16.2",
+    "@next-bricks/form": "^0.17.0",
     "@next-core/element": "^1.1.2",
     "@next-core/i18n": "^1.0.24",
     "@next-core/react-element": "^1.0.10",
@@ -42,8 +42,8 @@
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
+    "@next-api-sdk/cmdb-sdk": "^1.1.0",
     "@next-core/build-next-bricks": "^1.14.0",
-    "@next-core/test-next": "^1.0.8",
-    "@next-api-sdk/cmdb-sdk": "^1.1.0"
+    "@next-core/test-next": "^1.0.8"
   }
 }
