--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@next-core/yo": "^1.4.10",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
+    "@types/jest": "^29.5.4",
     "@types/js-yaml": "^3.12.7",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.14",
