--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -53,6 +53,7 @@
     "@prosemirror-adapter/react": "^0.2.2",
     "@type-config/strict": "^1.2.1",
     "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-dom": "0.0.0-experimental-ee8509801-20230117",
     "refractor": "^4.8.1"
   },
   "devDependencies": {
