--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -37,6 +37,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-bricks/form": "^0.17.6",
     "@next-bricks/icons": "^0.4.10",
     "@next-core/element": "^1.1.4",
     "@next-core/http": "^1.1.3",
