--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -34,6 +34,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-bricks/basic": "^0.30.3",
     "@next-bricks/icons": "^0.4.10",
     "@next-core/element": "^1.1.4",
     "@next-core/http": "^1.1.3",
