--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next-bricks/form",
-  "version": "0.17.11",
+  "version": "0.17.12",
   "homepage": "https://github.com/easyops-cn/next-bricks/tree/master/bricks/form",
   "repository": {
     "type": "git",
@@ -34,8 +34,8 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-bricks/containers": "^0.14.12",
-    "@next-bricks/icons": "^0.4.11",
+    "@next-bricks/containers": "^0.14.13",
+    "@next-bricks/icons": "^0.4.12",
     "@next-core/element": "^1.1.4",
     "@next-core/http": "^1.1.3",
     "@next-core/react-element": "^1.0.12",
@@ -44,15 +44,15 @@
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.6.1",
     "@next-shared/form": "^0.3.4",
+    "antd": "^5.9.0",
     "classnames": "^2.3.2",
+    "dayjs": "1.11.9",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
-    "resize-observer-polyfill": "^1.5.1",
-    "antd": "^5.9.0",
-    "dayjs": "1.11.9",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "0.0.0-experimental-ee8509801-20230117"
+    "react-dom": "0.0.0-experimental-ee8509801-20230117",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.14.2",
