--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -34,6 +34,10 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@next-bricks/basic": "^0.30.6",
     "@next-bricks/icons": "^0.4.12",
     "@next-core/element": "^1.1.4",
