--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -42,20 +42,16 @@
     "@next-core/http": "^1.1.4",
     "@next-core/i18n": "^1.0.26",
     "@next-core/react-element": "^1.0.12",
+    "@next-core/runtime": "^1.22.10",
     "@next-core/theme": "^1.1.1",
     "@next-core/types": "^1.6.1",
     "@next-shared/general": "^0.6.2",
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117",
-    "react-transition-group": "^4.4.5"
+    "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
-    "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
-    "@next-api-sdk/user-service-sdk": "^1.1.1",
     "@next-core/build-next-bricks": "^1.14.2",
-    "@next-core/test-next": "^1.0.10",
-    "@types/react-transition-group": "^4.4.6",
-    "classnames": "^2.3.2",
-    "hotkeys-js": "^3.10.1"
+    "@next-core/test-next": "^1.0.10"
   }
 }
