--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -34,16 +34,25 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
+    "@next-api-sdk/user-service-sdk": "^1.1.1",
     "@next-bricks/basic": "^0.30.6",
     "@next-bricks/form": "^0.17.13",
     "@next-bricks/icons": "^0.4.12",
+    "@next-core/easyops-runtime": "^0.6.33",
     "@next-core/element": "^1.1.4",
     "@next-core/i18n": "^1.0.26",
     "@next-core/react-element": "^1.0.12",
+    "@next-core/runtime": "^1.22.10",
     "@next-core/theme": "^1.1.1",
+    "@next-core/types": "^1.6.1",
     "@next-shared/general": "^0.6.2",
+    "classnames": "^2.3.2",
+    "hotkeys-js": "^3.10.1",
     "lodash": "^4.17.21",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-dom": "0.0.0-experimental-ee8509801-20230117",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.14.2",
