--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
