--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@next-bricks/containers": "^0.14.20",
     "@next-bricks/icons": "^0.5.3",
+    "@next-bricks/illustrations": "^0.1.27",
     "@next-core/element": "^1.1.4",
     "@next-core/http": "^1.1.4",
     "@next-core/react-element": "^1.0.13",
