--- a/bricks/nav/deploy-default/package.conf.yaml
+++ b/bricks/nav/deploy-default/package.conf.yaml
@@ -10,3 +10,5 @@ dependencies:
     version: ">= 0.17.7"
   - name: "icons-NB"
     version: ">= 0.5.0"
+  - name: user_service
+    version: ^1.36.1
