--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -60,6 +60,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@next-core/element": "^1.1.4",
     "@next-core/react-element": "^1.0.14",
+    "@next-core/runtime": "^1.22.15",
     "@next-core/utils": "^1.6.0",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
