--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -53,7 +53,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "@ant-design/cssinjs": "^1.16.0"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.14.2",
