--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -32,6 +32,7 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
+    "@next-api-sdk/next-builder-sdk": "^1.2.0",
     "@next-bricks/basic": "^0.35.2",
     "@next-bricks/icons": "^0.6.3",
     "@next-core/element": "^1.1.6",
@@ -46,6 +47,7 @@
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
